# rv-sparse

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  RESULTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rv-ci.yml
docs/: README.md  api_design.md  directory_structure.md
examples/: spgemm_csr_f32.c  spgemm_csr_f32_otf.c  spgemm_csr_i8.c
include/: rv_sparse.h  rv_sparse_types.h  stdint.h
include/rv_sparse/: spmm_csr.h
matrices/: getResources.sh  mat_resources.txt
matrices/example_rect_A/: example_rect_A.mtx
matrices/example_rect_B/: example_rect_B.mtx
matrices/example_square_A/: example_square_A.mtx
matrices/example_square_B/: example_square_B.mtx
matrix_data/: CSR_colIdx.txt  CSR_redColIdx.txt  GeneralInfo.txt
poc/: Makefile
poc/bench/: bench_spgemm  bench_spgemm.c
poc/include/: rv_sparse.h
poc/src/: csr.c  io.c  spgemm.c  spmv.c
poc/test/: test_spgemm  test_spgemm.c  test_spmv  test_spmv.c
scripts/: cooTOcsr.py
src/: spmm_rvv.c  spmm_scalar.c  spmv_rvv.c  spmv_scalar.c
src/core/: error.c  matrix.c  spgemm.c
src/kernels/spgemm/: accumulate_row_f32_rvv_indexed_fast.c  accumulate_row_i8_rvv_indexed_fast.c  csr_scalar_f32.c  (+7 more)
src/matmul/: AxBRowIP.c  benchmark.c  benchmark_spmm.c  csr.c  gen.c  spmm_csr.c  spmm_rvv.c  spmm_scalar.c  spmv_rvv.c  spmv_scalar.c  test_correctness.c  test_rvv_ops.c
tests/: test_main.c  test_spgemm_csr_f32.c  test_spgemm_csr_unroll4_f32.c  test_spmm_csr.c  test_spmv_scalar.c
tools/src/: mtx_to_csr_formatter.c
